--- a/assets/styles/containers.css
+++ b/assets/styles/containers.css
@@ -1,3 +1,22 @@
 .container {
-	width: 1024px;
+	width: 1130px;
+	margin: 0 auto;
+}
+
+@media screen and (max-width: 1100px) {
+	.container {
+			width: 1048px;
+		}
+}
+
+@media screen and (max-width: 1023px) {
+	.container {
+			width: 900px;
+		}
+}
+
+@media screen and (max-width: 880px) {
+	.container {
+		width: calc(100% - 40px);
+	}
 }
