--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -7,7 +7,7 @@ body, h1, h2, h3, h4, h5, p, a, ul, ol {
 body {
 	background-image: url(../img/body.png);
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: contain;
 }
 
 img {
@@ -25,5 +25,11 @@ a {
 @media screen and (max-width: 1023px) {
 	body {
 		background-position: -50px 0px;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	body {
+		background-position: -250px 0px;
 	}
 }
