--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -7,7 +7,7 @@ body, h1, h2, h3, h4, h5, p, a, ul, ol {
 body {
 	background-image: url(../img/body.png);
 	background-repeat: no-repeat;
-	background-size: contain;
+	background-size: 100%;
 }
 
 img {
@@ -22,14 +22,9 @@ a {
 	text-decoration: none;
 }
 
-@media screen and (max-width: 1023px) {
-	body {
-		background-position: -50px 0px;
-	}
-}
-
 @media screen and (max-width: 767px) {
 	body {
-		background-position: -250px 0px;
+		background-size: 1200px;
+    	background-position-x: -450px;
 	}
 }
