--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -22,6 +22,13 @@ a {
 	text-decoration: none;
 }
 
+@media screen and (max-width: 1023px) {
+	body {
+		background-size: 1200px;
+    	background-position-y: 0px;
+	}
+}
+
 @media screen and (max-width: 767px) {
 	body {
 		background-size: 1200px;
