--- a/assets/styles/card.css
+++ b/assets/styles/card.css
@@ -1,8 +1,8 @@
 .card {
-	padding: 15px 30px;
+	padding: 20px;
 	display: flex;
 	flex-direction: column;
-	width: calc(50% - 40px);
+	width: calc(50% - 20px);
 	height: 200px;
 	box-shadow: 0px 30px 100px rgba(47, 55, 237, 0.1);
 	border-radius: 10px;
@@ -11,8 +11,12 @@
 .card__title {
 	color: var(--blue);
 	margin-bottom: 15px;
+	font-size: 24px;
+	font-weight: bold;
+	line-height: 34px;
 }
 
 .card__info {
 	color: var(--gray);
+	font-size: 14px;
 }
