--- a/assets/styles/section.css
+++ b/assets/styles/section.css
@@ -1,4 +1,5 @@
 .section {
+	width: 100%;
 	height: 50vh;
 	display: flex;
 	align-items: center;
@@ -11,17 +12,21 @@
 
 .content {
 	display: flex;
-	height: 100%;
 	width: 50%;
 	flex-wrap: wrap;
 }
 
 .content.-left {
 	align-items: center;
+	justify-content: center;
+}
+
+.section__title {
+	width: calc(70% - 40px);
 }
 
 .content.-right {
-	align-items: space-between;
+	justify-content: center;
 }
 
 .content__top {
@@ -33,4 +38,14 @@
 .content__bottom {
 	display: flex;
 	justify-content: space-between;
+}
+
+@media screen and (max-width: 1023px) {
+	.section__content {
+		flex-direction: column;align-items: center;
+	}
+
+	.section__title {
+		margin-bottom: 25px;
+	}
 }
