--- a/assets/styles/hero.css
+++ b/assets/styles/hero.css
@@ -1,6 +1,6 @@
 .hero {
 	height: 100vh;
-	margin-bottom: 200px;
+	margin-bottom: 100px;
 }
 
 .hero__content {
@@ -43,6 +43,10 @@
 
 
 @media screen and (max-width: 1023px) {
+	.hero {
+		margin-bottom: 200px;
+	}
+
 	.hero__content {
 		justify-content: center;
 	}
