--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -5,7 +5,7 @@ body, h1, h2, h3, h4, h5, p, a, ul, ol {
 }
 
 body {
-	background-image: url(../img/body.png);
+	background-image: url(../img/body-bg.png);
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
