--- a/assets/styles/hero.css
+++ b/assets/styles/hero.css
@@ -44,7 +44,7 @@
 
 @media screen and (max-width: 1023px) {
 	.hero {
-		margin-bottom: 200px;
+		margin-bottom: 150px;
 	}
 
 	.hero__content {
@@ -63,6 +63,10 @@
 }
 
 @media screen and (max-width: 767px) {
+	.hero {
+		margin-bottom: 400px;
+	}
+
 	.hero__content {
 		justify-content: center;
 		margin: 0px;
@@ -82,7 +86,7 @@
 	}
 
 	.hero__subtitle {
-	line-height: 17px;
+		line-height: 17px;
 	}
 }
 
@@ -100,5 +104,11 @@
 
 	.hero__title {
 		width: auto;
+	}
+}
+
+@media screen and (max-width: 380px) {
+	.hero {
+		margin-bottom: 500px;
 	}
 }
