--- a/assets/styles/section.css
+++ b/assets/styles/section.css
@@ -3,6 +3,7 @@
 	height: 50vh;
 	display: flex;
 	align-items: center;
+	margin-bottom: 100px;
 }
 
 .section__content {
@@ -41,11 +42,33 @@
 }
 
 @media screen and (max-width: 1023px) {
+	.section {
+		margin-bottom: 125px;
+	}
+
 	.section__content {
 		flex-direction: column;align-items: center;
 	}
 
 	.section__title {
 		margin-bottom: 25px;
+	}
+
+	.content {
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.section {
+		margin-bottom: 375px;
+	}
+
+	.content__top {
+		flex-direction: column;
+	}
+
+	.content__bottom {
+		flex-direction: column;
 	}
 }
