--- a/assets/styles/circle.css
+++ b/assets/styles/circle.css
@@ -47,15 +47,34 @@
 	line-height: 20px;
 }
 
-@media screen and (max-width: 1100px) {
+.circle.-s {
+	height: 180px;
+	width: 180px;
+}
+
+.circle.-s.-right {
+	top: -20px;
+	right: -200px;
+}
+
+@media screen and (max-width: 1240px) {
 	.circle.-hero {
 		bottom: -30%;
+	}
+
+	.circle.-s.-right {
+		top: -20px;
+		right: -80px;
 	}
 }
 
 @media screen and (max-width: 1023px) {
 	.circle.-hero {
 		left: 5%;
+	}
+
+	.circle.-s.-right {
+		display: none;
 	}
 }
 
