--- a/assets/styles/reason.css
+++ b/assets/styles/reason.css
@@ -3,8 +3,8 @@
 	height: 50vh;
 	background-image: url(../img/reason-bg.png);
 	background-repeat: no-repeat;
-	background-position: 150px 0px;
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: visible;
 }
 
 .reason__content {
@@ -36,6 +36,7 @@
 @media screen and (max-width: 767px) {
 	.reason {
 		margin-bottom: 150px;
+		/*background-image: url(../img/reason__bg__2.png);*/
 	}
 
 	.reason__cards {
