--- a/assets/styles/activities.css
+++ b/assets/styles/activities.css
@@ -1,5 +1,6 @@
 .activities {
 	height: 60vh;
+	margin-bottom: 200px;
 }
 
 .activities__content {
@@ -19,16 +20,7 @@
 .activities__cards {
 	width: 50%;
 	display: flex;
-	flex-direction: column;
-}
-
-.activities__top {
-	display: flex;
-	justify-content: space-between;
-}
-
-.activities__bottom {
-	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 }
 
@@ -61,16 +53,6 @@
 @media screen and (max-width: 767px) {
 	.activities__cards {
 		width: 100%;
-	}
-
-	.activities__top {
-		flex-direction: column;
-		justify-content: center;
-	}
-
-	.activities__bottom {
-		flex-direction: column;
-		justify-content: center;
 	}
 
 	.activities__end {
