--- a/assets/styles/activities.css
+++ b/assets/styles/activities.css
@@ -1,6 +1,5 @@
 .activities {
-	height: 60vh;
-	margin-bottom: 200px;
+	margin-bottom: 75px;
 }
 
 .activities__content {
@@ -22,6 +21,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
+	margin-bottom: 20px;
 }
 
 .activities__end {
@@ -51,8 +51,15 @@
 }
 
 @media screen and (max-width: 767px) {
+	.activities__content {
+		align-items: center;
+	}
+
 	.activities__cards {
 		width: 100%;
+		flex-direction: column;
+		align-items: center;
+		margin-bottom: 0px;
 	}
 
 	.activities__end {
