--- a/assets/styles/reason.css
+++ b/assets/styles/reason.css
@@ -2,6 +2,7 @@
 	margin-bottom: 100px;
 	background-image: url(../img/reason-bg.png);
 	background-repeat: no-repeat;
+	background-size: cover;
 	overflow-x: hidden;
 	background-position: 150px 0px;
 }
