6th section started

--- a/assets/styles/result.css
+++ b/assets/styles/result.css
@@ -1,8 +1,9 @@
 .result {
 	background-image: url(../img/result-bg.png);
 	/*background: radial-gradient(blue, blue, white);*/
-	background-size: cover;
+	background-size: 1200px;
 	background-repeat: no-repeat;
+	padding: 60px 0px 130px;
 }
 
 .result__content {
@@ -21,4 +22,23 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
+}
+
+@media screen and (max-width: 1199px) {
+	.result {
+		background-size: calc(100% - 100px);
+	}
+}
+
+@media screen and (max-width: 1023px) {
+	.result {
+		background-size: calc(100% + 170px);
+		padding: 0px;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.result {
+		background-size: cover;
+	}
 }
