6th section before adaptive

--- a/assets/styles/card.css
+++ b/assets/styles/card.css
@@ -1,12 +1,11 @@
 .card {
 	padding: 30px;
-	display: flex;
-	flex-direction: column;
+	/*display: flex;
+	flex-direction: column;*/
 	box-shadow: 0px 30px 100px rgba(47, 55, 237, 0.1);
 	border-radius: 10px;
 	background-color: var(--white);
 	margin-bottom: 20px;
-	width: auto;
 }
 
 .card.-s {
@@ -48,6 +47,10 @@
 
 .card.-threeinrow {
 	width: calc(33% - 20px);
+}
+
+.card.-fourinrow {
+	width: calc(25% - 20px);
 }
 
 .card.-img {
