--- a/assets/styles/result.css
+++ b/assets/styles/result.css
@@ -4,6 +4,7 @@
 	background-size: 1200px;
 	background-repeat: no-repeat;
 	padding: 60px 0px 130px;
+	margin-bottom: 45px;
 }
 
 .result__content {
