Trying to fix 3rd

--- a/assets/styles/card.css
+++ b/assets/styles/card.css
@@ -133,6 +133,9 @@
 
 	.card.-transparent.-twoinrow.-s {
 		height: auto;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
 	}
 
 	.card.-circle {
