--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -22,6 +22,10 @@ a {
 	text-decoration: none;
 }
 
+section {
+	overflow-x: hidden;
+}
+
 @media screen and (max-width: 1023px) {
 	body {
 		background-size: 1200px;
