--- a/assets/styles/circle.css
+++ b/assets/styles/circle.css
@@ -48,6 +48,16 @@
 	line-height: 20px;
 }
 
+.circle__link.-s {
+	font-size: 10px;
+}
+
+.circle__info {
+	font-size: 12px;
+	line-height: 17px;
+	text-align: center;
+}
+
 .circle.-s {
 	height: 180px;
 	width: 180px;
@@ -56,6 +66,19 @@
 .circle.-s.-right {
 	top: -20px;
 	right: -100px;
+}
+
+.circle.-img {
+	flex-direction: column;
+	align-items: center;
+	width: 150px;
+	height: 150px;
+	right: 40px;
+	bottom: -40px;
+}
+
+.circle__img {
+	
 }
 
 @media screen and (max-width: 1240px) {
@@ -75,6 +98,10 @@
 	}
 
 	.circle.-s.-right {
+		display: none;
+	}
+
+	.circle.-img {
 		display: none;
 	}
 }
