--- a/assets/styles/bubble.css
+++ b/assets/styles/bubble.css
@@ -6,6 +6,7 @@
     background: var(--white);
     color: var(--gray);
     box-shadow: 0px 10px 30px rgba(47, 55, 237, 0.1);
+    margin-bottom: 40px;
 }
 
 .bubble:before {
