--- a/assets/styles/card.css
+++ b/assets/styles/card.css
@@ -49,6 +49,10 @@
 	font-size: 14px;
 }
 
+.card__info.-b {
+	color: var(--blue);
+}
+
 .card.-twoinrow {
 	width: calc(50% - 20px);
 }
@@ -74,6 +78,11 @@
 	right: 0;
 	top: 50%;
 	transform: translateY(-50%);
+}
+
+.card.-circle.-s {
+	position: static;
+	width: calc(33% - 20px);
 }
 
 .card__title.-up.-w {
