--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -2,6 +2,7 @@
 	--blue: #2F80ED;
 	--white: #ffffff;
 	--green: #64E2CD;
+	--darkblue: radial-gradient(68.31% 68.31% at 50% 50%, #6AAAFF 0%, #2F80ED 100%), #FFFFFF;;
 	--lightgreen: rgba(100, 226, 205, 0.5);
 	--black: black;
 	--gray: #636363;
