--- a/assets/styles/card.css
+++ b/assets/styles/card.css
@@ -1,7 +1,5 @@
 .card {
 	padding: 30px;
-	/*display: flex;
-	flex-direction: column;*/
 	box-shadow: 0px 30px 100px rgba(47, 55, 237, 0.1);
 	border-radius: 10px;
 	background-color: var(--white);
@@ -47,6 +45,7 @@
 .card__info {
 	color: var(--gray);
 	font-size: 14px;
+	margin-bottom: 10px;
 }
 
 .card__info.-b {
@@ -70,8 +69,27 @@
 	justify-content: space-between;
 	align-items: center;
 }
+
+.card.-f {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 45%;
+}
+
+.card.-col {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-right: 20px;
+}
+
+.card.-col:last-child {
+	margin-right: 0px;
+}
 	
-.card.-circle {
+.card.-circle.-m {
 	width: 50%;
 	padding: 40px;
 	position: absolute;
@@ -81,8 +99,9 @@
 }
 
 .card.-circle.-s {
-	position: static;
+	position: relative;
 	width: calc(33% - 20px);
+	transform: none;
 }
 
 .card__title.-up.-w {
@@ -102,13 +121,40 @@
 	box-shadow: 0px 10px 50px rgba(119, 157, 255, 0.3);
 }
 
+.card.-circle.-s:after {
+	right: -10px;
+	top: -10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: var(--white);
+	font-size: 12px;
+	text-transform: uppercase;
+	content: "Выгодно";
+	position: absolute;
+	height: 75px;
+	width: 75px;
+	border-radius: 50%;
+	background: radial-gradient(68.31% 68.31% at 50% 50%, #6AAAFF 0%, #2F80ED 100%), #FFFFFF;
+	box-shadow: 0px 10px 50px rgba(119, 157, 255, 0.3);
+}
+
 @media screen and (max-width: 1023px) {
 	.card.-fourinrow {
 		width: calc(50% - 20px);
 	}
 
+	.card.-threeinrow {
+		width: calc(50% - 20px);
+		margin-right: 0px;
+	}
+
 	.card.-circle {
 		position: static;
+	}
+
+	.card.-circle.-s {
+		width: calc(50% - 20px);
 	}
 
 	.card.-img {
@@ -117,6 +163,22 @@
 
 	.card.-l {
 		display: none;
+	}
+
+	.card.-f {
+		width: calc(50% - 20px);
+		justify-content: center;
+		flex-direction: column;
+	}
+
+	.card__text {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.card.-col {
+		margin-right: 20px;
 	}
 }
 
@@ -140,6 +202,10 @@
 		height: calc(33% - 20px);
 	}
 
+	.card.-threeinrow {
+		width: calc(100% - 20px);
+	}
+
 	.card.-transparent.-twoinrow.-s {
 		height: auto;
 		display: flex;
@@ -147,7 +213,7 @@
 		flex-direction: column;
 	}
 
-	.card.-circle {
+	.card.-circle.-m {
 		display: none;
 	}
 
@@ -157,5 +223,17 @@
 
 	.card__img {
 		margin-bottom: 15px;
+	}
+
+	.card.-f {
+		width: 100%;
+	}
+
+	.card.-circle.-s {
+		width: calc(100% - 20px);
+	}
+
+	.card.-col {
+		margin-right: 0px;
 	}
 }
