--- a/assets/styles/price.css
+++ b/assets/styles/price.css
@@ -1,4 +1,5 @@
 .price {
+	padding-top: 80px;
 	margin-bottom: 45px;
 	background-image: url(../img/price-bg.png);
 	background-repeat: no-repeat;
@@ -10,11 +11,12 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+	position: relative;
 }
 
 .price__cards {
-	width: 75%;
+	width: 100%;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	flex-wrap: wrap;
 }
