--- a/assets/styles/card.css
+++ b/assets/styles/card.css
@@ -147,6 +147,11 @@
 	box-shadow: 0px 10px 50px rgba(119, 157, 255, 0.3);
 }
 
+.card__info.-end {
+	text-align: right;
+}
+
+
 @media screen and (max-width: 1023px) {
 	.card.-fourinrow {
 		width: calc(50% - 20px);
