--- a/assets/styles/video.css
+++ b/assets/styles/video.css
@@ -15,6 +15,11 @@
 	background-color: var(--blue);
 }
 
+.video__control.-s {
+	width: 50px;
+	height: 50px;
+}
+
 .triangle {
 	position: absolute;
 	top: 50%;
@@ -25,4 +30,8 @@
 	border-style: solid;
 	border-width: 17.5px 0 17.5px 30px;
 	border-color: transparent transparent transparent #ffffff;
+}
+
+.triangle.-s {
+	border-width: 17.5px 0 17.5px 17.5px;
 }
